@@ -4,6 +4,9 @@
 	both bug-gnu-emacs (etc) and debbugs.
 	(debbugs-emacs): Default to list the done bugs.
 	(debbugs-toggle-sort): New command and keystroke.
+	(debbugs-send-control-message): Record the bug number on group
+	entry, so that we don't have to rely on subject header mangling,
+	which is fragile.
 
 2011-07-02  Michael Albinus  <michael.albinus@gmx.de>
 
